# http-server

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/http_server/: __main__.py  tcp.py
tests/: test_tcp.py
